Completed first alpha release of saving imported data to source.